k8s_CSI/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: symfony-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: dev.symfony.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: symfony-nginx
                port:
                  number: 80
